--- a/day3.html
+++ b/day3.html
@@ -31,7 +31,7 @@
 
       <div class="blog--top">
         <h1 class="header">
-          Hi Candice !!
+          Let the brainstorm rage on
         </h1>
         <span class="date">
           April 14th 2014
