Added day 5 blog

--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
     <ul class="blogs">
 
       <li class="blog">
+        <a href="day4.html" class="blog__link blog--yellow">
+          <div class="blog__title">
+            <h1 class="header">We love everything</h1>
+            <span class="date">April 16th 2014</span>
+          </div>
+        </a>
+      </li>
+
+      <li class="blog">
         <a href="day4.html" class="blog__link blog--red">
           <div class="blog__title">
             <h1 class="header">Bridge from designing to programming</h1>
