Fixed link back to home

--- a/day1.html
+++ b/day1.html
@@ -27,7 +27,7 @@
 
 <div class="wrap">
   <div class="top">
-    <a href="index.html" class="logo">
+    <a href="/" class="logo">
       The Makers' Blog
     </a>
   </div>
