--- a/day5.html
+++ b/day5.html
@@ -27,7 +27,7 @@
 
 <div class="wrap">
   <div class="top">
-    <a href="index.html" class="logo">
+    <a href="/" class="logo">
       The Makers' Blog
     </a>
   </div>
