--- a/index.html
+++ b/index.html
@@ -36,6 +36,33 @@
     <ul class="blogs">
 
       <li class="blog">
+        <a href="day8.html" class="blog__link blog--teal">
+          <div class="blog__title">
+            <h1 class="header">Darkness before the dawn</h1>
+            <span class="date">April 19th 2014</span>
+          </div>
+        </a>
+      </li>
+
+      <li class="blog">
+        <a href="day7.html" class="blog__link blog--pink">
+          <div class="blog__title">
+            <h1 class="header">Whatever it takes </h1>
+            <span class="date">April 18th 2014</span>
+          </div>
+        </a>
+      </li>
+
+      <li class="blog">
+        <a href="day6.html" class="blog__link blog--purple">
+          <div class="blog__title">
+            <h1 class="header">Always with you</h1>
+            <span class="date">April 17th 2014</span>
+          </div>
+        </a>
+      </li>
+
+      <li class="blog">
         <a href="day5.html" class="blog__link blog--yellow">
           <div class="blog__title">
             <h1 class="header">We love everything</h1>
