--- a/day8.html
+++ b/day8.html
@@ -55,7 +55,9 @@
 
       <p>As our design idea gets more and more clear, we get more and more excited! I went to bed at 4 since all the thoughts kept flooding in my brain. In this morning, we were struggling about how to improve UI and everyone was stuck at that time. After we took a rest, Kubi suddenly camp up with a "delicious" solution and life became hopeful again! At that moment, I realized how beautiful is software engineering. It's the process of creating and exploring. We don't know the solution to the puzzle and whether we can find it. However, that's why it is so rewarding when we feel the perfect and unexpected solution!</p>
 
-      <p>As our design idea gets more and more clear, we get more and more excited! I went to bed at 4 since all the thoughts kept flooding in my brain. In this morning, we were struggling about how to improve UI and everyone was stuck at that time. After we took a rest, Kubi suddenly camp up with a "delicious" solution and life became hopeful again! At that moment, I realized how beautiful is software engineering. It's the process of creating and exploring. We don't know the solution to the puzzle and whether we can find it. However, that's why it is so rewarding when we feel the perfect and unexpected solution!</p>
+      <p>Since everyone was so active today, we created a point system as rewards. Kevin led us to the shortcut out of CSL and also helped guests of UCI to find their way. James was so impressed by his leadership skills and rewarded Kevin two points. Kubi rewarded Kenny one point for his brilliant idea! Kevin was becoming more humorous that Kubi could not different Kevin's jokes from the truth. </p>
+
+      <p>The Makers' vocabulary: delicious means awesome.</p>
 
     </div>
   </div>
