--- a/day6.html
+++ b/day6.html
@@ -36,7 +36,7 @@
     <div class="blogTop teal">
 
       <div class="imageWrap">
-        <img src="images/day6/main.jpg" alt="Team Photo">
+        <img src="images/day6/main.JPG" alt="Team Photo">
       </div>
 
       <div class="blog--top">
