--- a/day4.html
+++ b/day4.html
@@ -13,15 +13,15 @@
 
   <link rel="stylesheet" href="css/build/minified/global.css">
 
-  <script type="text/javascript">
-    (function(d) {
-      var config = {
-        kitId: 'shg6ids',
-        scriptTimeout: 3000
-      },
-      h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='//use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
-    })(document);
-  </script>
+  // <script type="text/javascript">
+  //   (function(d) {
+  //     var config = {
+  //       kitId: 'shg6ids',
+  //       scriptTimeout: 3000
+  //     },
+  //     h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='//use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+  //   })(document);
+  // </script>
 </head>
 <body>
 
@@ -58,8 +58,100 @@
 
       <p>After that, we started to address the actual implementation of the application. By the way, Kevin's handwriting is so cool since he capitalizes each character! Also, it was so nice of Cubi to keep track of time so Kenny and Candice were not late for class. Good timing was why we were productive, too!</p>
     </div>
+
+    <section class="gallery">
+      <h2 class="header">
+        - Gallery -
+      </h2>
+      <ul class="pictures">
+        <li class="picture">
+          <a href="images/day4/1.jpg">
+            <img src="images/day4/1.jpg" alt="Pic 1">
+          </a>
+
+        </li>
+        <li class="picture">
+          <a href="images/day4/2.jpg">
+            <img src="images/day4/2.jpg" alt="Pic 1">
+          </a>
+
+        </li>
+        <li class="picture">
+          <a href="images/day4/3.jpg">
+            <img src="images/day4/3.jpg" alt="Pic 1">
+          </a>
+
+        </li>
+        <li class="picture">
+          <a href="images/day4/4.jpg">
+            <img src="images/day4/4.jpg" alt="Pic 1">
+          </a>
+
+        </li>
+
+        <li class="picture">
+          <a href="images/day4/5.jpg">
+            <img src="images/day4/5.jpg" alt="Pic 1">
+          </a>
+
+        </li>
+
+        <li class="picture">
+          <a href="images/day4/6.jpg">
+            <img src="images/day4/6.jpg" alt="Pic 1">
+          </a>
+
+        </li>
+
+        <li class="picture">
+          <a href="images/day4/7.jpg">
+            <img src="images/day4/7.jpg" alt="Pic 1">
+          </a>
+
+        </li>
+
+        <li class="picture">
+          <a href="images/day4/8.jpg">
+            <img src="images/day4/8.jpg" alt="Pic 1">
+          </a>
+
+        </li>
+
+        <li class="picture">
+          <a href="images/day4/9.jpg">
+            <img src="images/day4/9.jpg" alt="Pic 1">
+          </a>
+
+        </li>
+
+        <li class="picture">
+          <a href="images/day4/10.jpg">
+            <img src="images/day4/10.jpg" alt="Pic 1">
+          </a>
+
+        </li>
+
+        <li class="picture">
+          <a href="images/day4/11.jpg">
+            <img src="images/day4/11.jpg" alt="Pic 1">
+          </a>
+
+        </li>
+
+        <li class="picture">
+          <a href="images/day4/12.jpg">
+            <img src="images/day4/12.jpg" alt="Pic 1">
+          </a>
+
+        </li>
+      </ul>
+    </section>
   </div>
 </div>
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+
+<script src="js/build/production.min.js"></script>
 
 </body>
 </html>
