--- a/day4.html
+++ b/day4.html
@@ -13,7 +13,7 @@
 
   <link rel="stylesheet" href="css/build/minified/global.css">
 
-  // <script type="text/javascript">
+  <script type="text/javascript">
   //   (function(d) {
   //     var config = {
   //       kitId: 'shg6ids',
