Modified the lightbox and add img to the page

--- a/day4.html
+++ b/day4.html
@@ -40,6 +40,8 @@
       </div>
 
       <div class="blog--top">
+
+        <!-- Title of the Blog -->
         <h1 class="header">
           Bridge from designing to programming
         </h1>
@@ -54,6 +56,13 @@
 
       <p>Today was exciting since we were going to cross the bridge from designing to programming! We went to EVOKE lab to discuss problems our app needs to solve and solutions the app provides.</p>
 
+      <!-- Edit Image and Caption -->
+      <div class="blogImg">
+        <img src="images/day4/1.jpg" alt="sf">
+        <span class="caption">Brainstorming</span>
+      </div>
+
+
       <p>We were very productive since we had an agenda to follow. Right after we read the agenda, we wrote on sticky notes the problems autistic children encounter and posted notes on the whiteboard individually. No extra words were needed to be told. It seems like we have been working together for our life. James was making up his lunch but he still came up with a lot of useful points. Kevin and Kenny used their fancy cameras to record these wonderful moments when we worked together in harmony. After we finished brainstorming, we clarified our thoughts into categories of expression, capture memories, assurance and engaging.</p>
 
       <p>After that, we started to address the actual implementation of the application. By the way, Kevin's handwriting is so cool since he capitalizes each character! Also, it was so nice of Cubi to keep track of time so Kenny and Candice were not late for class. Good timing was why we were productive, too!</p>
@@ -65,81 +74,81 @@
       </h2>
       <ul class="pictures">
         <li class="picture">
-          <a href="images/day4/1.jpg">
+          <a href="images/day4/1.jpg" class="galleryLink">
             <img src="images/day4/1.jpg" alt="Pic 1">
           </a>
 
         </li>
         <li class="picture">
-          <a href="images/day4/2.jpg">
+          <a href="images/day4/2.jpg" class="galleryLink">
             <img src="images/day4/2.jpg" alt="Pic 1">
           </a>
 
         </li>
         <li class="picture">
-          <a href="images/day4/3.jpg">
+          <a href="images/day4/3.jpg" class="galleryLink">
             <img src="images/day4/3.jpg" alt="Pic 1">
           </a>
 
         </li>
         <li class="picture">
-          <a href="images/day4/4.jpg">
+          <a href="images/day4/4.jpg" class="galleryLink">
             <img src="images/day4/4.jpg" alt="Pic 1">
           </a>
 
         </li>
 
         <li class="picture">
-          <a href="images/day4/5.jpg">
+          <a href="images/day4/5.jpg" class="galleryLink">
             <img src="images/day4/5.jpg" alt="Pic 1">
           </a>
 
         </li>
 
         <li class="picture">
-          <a href="images/day4/6.jpg">
+          <a href="images/day4/6.jpg" class="galleryLink">
             <img src="images/day4/6.jpg" alt="Pic 1">
           </a>
 
         </li>
 
         <li class="picture">
-          <a href="images/day4/7.jpg">
+          <a href="images/day4/7.jpg" class="galleryLink">
             <img src="images/day4/7.jpg" alt="Pic 1">
           </a>
 
         </li>
 
         <li class="picture">
-          <a href="images/day4/8.jpg">
+          <a href="images/day4/8.jpg" class="galleryLink">
             <img src="images/day4/8.jpg" alt="Pic 1">
           </a>
 
         </li>
 
         <li class="picture">
-          <a href="images/day4/9.jpg">
+          <a href="images/day4/9.jpg" class="galleryLink">
             <img src="images/day4/9.jpg" alt="Pic 1">
           </a>
 
         </li>
 
         <li class="picture">
-          <a href="images/day4/10.jpg">
+          <a href="images/day4/10.jpg" class="galleryLink">
             <img src="images/day4/10.jpg" alt="Pic 1">
           </a>
 
         </li>
 
         <li class="picture">
-          <a href="images/day4/11.jpg">
+          <a href="images/day4/11.jpg" class="galleryLink">
             <img src="images/day4/11.jpg" alt="Pic 1">
           </a>
 
         </li>
 
         <li class="picture">
-          <a href="images/day4/12.jpg">
+          <a href="images/day4/12.jpg" class="galleryLink">
             <img src="images/day4/12.jpg" alt="Pic 1">
           </a>
 
