--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
     <ul class="blogs">
 
       <li class="blog">
+        <a href="day10.html" class="blog__link blog--lightGreen">
+          <div class="blog__title">
+            <h1 class="header">Waiting for Kubi and James</h1>
+            <span class="date">April 21th 2014</span>
+          </div>
+        </a>
+      </li>
+
+      <li class="blog">
         <a href="day8.html" class="blog__link blog--teal">
           <div class="blog__title">
             <h1 class="header">Darkness before the dawn</h1>
