add design process to first gallery

--- a/day10.html
+++ b/day10.html
@@ -36,7 +36,7 @@
     <div class="blogTop red">
 
       <div class="imageWrap">
-        <img src="images/day10/IMG_4123.jpg" alt="Team Photo">
+        <img src="images/day10/main.jpg" alt="Team Photo">
       </div>
 
 
@@ -66,6 +66,7 @@
 
       <p>After the workshop, we went to 5th floor DBH to do research on Autism and discuss about collaboration tools. We decide to collaborate our codes through Git for its' powerful features. To make Git more fun, we named our repositories behind our favorite Chinese food such as Bokchoy and Pipatofu. Bokchoy contains the working code and Pipatofu contains the blog posts. Git is challenging but through our strong team bonding, we will be able to Git it =)</p>
     </div>
+   
   </div>
 </div>
 
