--- a/index.html
+++ b/index.html
@@ -31,6 +31,96 @@
       The Makers' Blog
     </a>
   </div>
+  <div class = "main_gallery">
+      <section class="gallery">
+<!--       <h2 class="header">
+        - Gallery -
+      </h2> -->
+      <!-- gallery -->
+      <ul class="pictures">
+        <li class="picture">
+          <a href="design15th.html" class="galleryLink">
+            <img src="images/mainGal/4.jpg" alt="Pic 1">
+          </a>
+
+        </li>
+        <li class="picture">
+          <a href="images/day4/2.jpg" class="galleryLink">
+            <img src="images/mainGal/2.jpg" alt="Pic 1">
+          </a>
+
+        </li>
+        <li class="picture">
+          <a href="images/day4/3.jpg" class="galleryLink">
+            <img src="images/mainGal/3.jpg" alt="Pic 1">
+          </a>
+
+        </li>
+<!--         <li class="picture">
+          <a href="images/day4/4.jpg" class="galleryLink">
+            <img src="images/day4/4.jpg" alt="Pic 1">
+          </a>
+
+        </li>
+
+        <li class="picture">
+          <a href="images/day4/5.jpg" class="galleryLink">
+            <img src="images/day4/5.jpg" alt="Pic 1">
+          </a>
+
+        </li>
+
+        <li class="picture">
+          <a href="images/day4/6.jpg" class="galleryLink">
+            <img src="images/day4/6.jpg" alt="Pic 1">
+          </a>
+
+        </li> -->
+
+<!--         <li class="picture">
+          <a href="images/day4/7.jpg" class="galleryLink">
+            <img src="images/day4/7.jpg" alt="Pic 1">
+          </a>
+
+        </li>
+
+        <li class="picture">
+          <a href="images/day4/8.jpg" class="galleryLink">
+            <img src="images/day4/8.jpg" alt="Pic 1">
+          </a>
+
+        </li>
+
+        <li class="picture">
+          <a href="images/day4/9.jpg" class="galleryLink">
+            <img src="images/day4/9.jpg" alt="Pic 1">
+          </a>
+
+        </li>
+
+        <li class="picture">
+          <a href="images/day4/10.jpg" class="galleryLink">
+            <img src="images/day4/10.jpg" alt="Pic 1">
+          </a>
+
+        </li>
+
+        <li class="picture">
+          <a href="images/day4/11.jpg" class="galleryLink">
+            <img src="images/day4/11.jpg" alt="Pic 1">
+          </a>
+
+        </li>
+
+        <li class="picture">
+          <a href="images/day4/12.jpg" class="galleryLink">
+            <img src="images/day4/12.jpg" alt="Pic 1">
+          </a>
+
+        </li> -->
+      </ul>
+    </section>  
+  </div>
 
   <div class="blog-wrap">
     <ul class="blogs">
