add April21st and gallery link

--- a/day10.html
+++ b/day10.html
@@ -36,13 +36,13 @@
     <div class="blogTop red">
 
       <div class="imageWrap">
-        <img src="images/day10/main.jpg" alt="Team Photo">
+        <img src="images/day10/group.jpg" alt="Team Photo">
       </div>
 
 
       <div class="blog--top">
         <h1 class="header">
-          Waiting for Kubi and James
+          Moving under stress
         </h1>
         <span class="date">
           April 21th 2014
@@ -52,19 +52,24 @@
     </div>
 
     <div class="blog--description">
-      <span class="quote">(Quote of the day: We like to joke, but when we work, we are serious -- by Cubi)</span>
+      <span class="quote">(Quote of the day: They only up to 4 people in a team guys! Oh, I'm sorry, I meant the HackUCI - by Kenny)</span>
 
-      <p>Today, we attended the three workshops offered on the 6th floor of DBH. We sincerely enjoyed all three topics and guest speakers. Gina's pizza was delightful too! Candice may or may not have eaten four slices :)</p>
+      <p>We felt pretty stressful this morning when we found out that we still had to do the poster and video. We had a hard time deciding whether the article bar should appear on our application. Finally, Kevin suggested we focus on other undone work.</p>
 
-      <p>Afterwards, we read portraits of autism as described by parents of autistic children. James summarized each one in two minutes! He is so good at taking notes and types so FAST. We were moved by descriptions of the beautiful moments when autistic children say their first words.</p>
+            <!-- Edit Image and Caption -->
+      <div class="blogImg">
+        <img src="images/day10/cubi.jpg" alt="sf">
+        <span class="caption">Go crazy</span>
+      </div>
 
-      <p>After organizing our research, we decided to end the day at Veggie Grill. Partly because it's delicious. But also since Candice is undergoing a challenge with her friend to not eat meat for 20 days. Over a sweet and tangy thai "chikin" salad, onion rings, bbq steak sandwich, and quinoa salad, we reflected on our time together so far.</p>
+      <p>However, we worked efficiently after we suvived 148. Kevin finished the logo design in two hours and it looked so elegant. Cubi was able to make our application work fine with any format! Kenny worked hard to opitimize the color of our app, too!</p>
+      <!-- Edit Image and Caption -->
+      <div class="blogImg">
+        <img src="images/day10/kevin.jpg" alt="sf">
+        <span class="caption">So serious</span>
+      </div>
 
-      <p>We work efficiently not only because of our serious attitude but also because of the supportive environment Cubi creates. He says "No Problem" no matter what happens. After we work, we like to joke a lot. I heared an interesting comment before, "only smart people like to joke because they have time to think up jokes besides working." I just realize how true is it today!</p>
-
-      <h2>Let's Git It</h2>
-
-      <p>After the workshop, we went to 5th floor DBH to do research on Autism and discuss about collaboration tools. We decide to collaborate our codes through Git for its' powerful features. To make Git more fun, we named our repositories behind our favorite Chinese food such as Bokchoy and Pipatofu. Bokchoy contains the working code and Pipatofu contains the blog posts. Git is challenging but through our strong team bonding, we will be able to Git it =)</p>
+      <p>After hard work, we rewarded ourselves with chipotle late dinner. I remembered Kenny's famous question "you have finished" when he saw me stop eating quckily. I felt bad that he thought I ate so fast. Just Kiding! It is true that Kenny was so funny today. When he spoke and also almost laughed at that moment, his voice sounded so funny! Moreover, Kevin used our application as a repeater and kept pressing "I want love..love...love..."</p>
     </div>
    
   </div>
