--- a/design16th.html
+++ b/design16th.html
@@ -36,14 +36,14 @@
     <div class="blogTop teal">
 
       <div class="imageWrap">
-        <img src="images/design15th/9.jpg" alt="Team Photo">
+        <img src="images/design16th/main.jpg" alt="Team Photo">
       </div>
 
       <div class="blog--top">
 
         <!-- Title of the Blog -->
         <h1 class="header">
-          Fantastic ideas born
+          storyboarding and Personna
         </h1>
         <span class="date">
           April 15th 2014
@@ -63,7 +63,7 @@
       </div>
 
 
-      <p>We started our design progress by drawing afinity diagram. We wrote down challenges for austic kids and parents individually and post them on the whiteboard </p>
+      <p>We started our design progress by storyboarding. We wrote down challenges for austic kids and parents individually and post them on the whiteboard </p>
 
       <div class="blogImg">
         <img src="images/design15th/1.jpg" alt="sf">
@@ -82,95 +82,6 @@
 
 
 
-
-
-<!--     <section class="gallery">
-      <h2 class="header">
-        - Gallery -
-      </h2>
-      <ul class="pictures">
-        <li class="picture">
-          <a href="images/day4/1.jpg" class="galleryLink">
-            <img src="images/day4/1.jpg" alt="Pic 1">
-          </a>
-
-        </li>
-        <li class="picture">
-          <a href="images/day4/2.jpg" class="galleryLink">
-            <img src="images/day4/2.jpg" alt="Pic 1">
-          </a>
-
-        </li>
-        <li class="picture">
-          <a href="images/day4/3.jpg" class="galleryLink">
-            <img src="images/day4/3.jpg" alt="Pic 1">
-          </a>
-
-        </li>
-        <li class="picture">
-          <a href="images/day4/4.jpg" class="galleryLink">
-            <img src="images/day4/4.jpg" alt="Pic 1">
-          </a>
-
-        </li>
-
-        <li class="picture">
-          <a href="images/day4/5.jpg" class="galleryLink">
-            <img src="images/day4/5.jpg" alt="Pic 1">
-          </a>
-
-        </li>
-
-        <li class="picture">
-          <a href="images/day4/6.jpg" class="galleryLink">
-            <img src="images/day4/6.jpg" alt="Pic 1">
-          </a>
-
-        </li>
-
-        <li class="picture">
-          <a href="images/day4/7.jpg" class="galleryLink">
-            <img src="images/day4/7.jpg" alt="Pic 1">
-          </a>
-
-        </li>
-
-        <li class="picture">
-          <a href="images/day4/8.jpg" class="galleryLink">
-            <img src="images/day4/8.jpg" alt="Pic 1">
-          </a>
-
-        </li>
-
-        <li class="picture">
-          <a href="images/day4/9.jpg" class="galleryLink">
-            <img src="images/day4/9.jpg" alt="Pic 1">
-          </a>
-
-        </li>
-
-        <li class="picture">
-          <a href="images/day4/10.jpg" class="galleryLink">
-            <img src="images/day4/10.jpg" alt="Pic 1">
-          </a>
-
-        </li>
-
-        <li class="picture">
-          <a href="images/day4/11.jpg" class="galleryLink">
-            <img src="images/day4/11.jpg" alt="Pic 1">
-          </a>
-
-        </li>
-
-        <li class="picture">
-          <a href="images/day4/12.jpg" class="galleryLink">
-            <img src="images/day4/12.jpg" alt="Pic 1">
-          </a>
-
-        </li>
-      </ul>
-    </section> -->
   </div>
 </div>
 
