--- a/index.html
+++ b/index.html
@@ -45,79 +45,18 @@
 
         </li>
         <li class="picture">
-          <a href="images/day4/2.jpg" class="galleryLink">
+          <a href="design16th.html" class="galleryLink">
             <img src="images/mainGal/2.jpg" alt="Pic 1">
           </a>
 
         </li>
         <li class="picture">
-          <a href="images/day4/3.jpg" class="galleryLink">
+          <a href="design21st.html" class="galleryLink">
             <img src="images/mainGal/3.jpg" alt="Pic 1">
           </a>
 
         </li>
-<!--         <li class="picture">
-          <a href="images/day4/4.jpg" class="galleryLink">
-            <img src="images/day4/4.jpg" alt="Pic 1">
-          </a>
 
-        </li>
-
-        <li class="picture">
-          <a href="images/day4/5.jpg" class="galleryLink">
-            <img src="images/day4/5.jpg" alt="Pic 1">
-          </a>
-
-        </li>
-
-        <li class="picture">
-          <a href="images/day4/6.jpg" class="galleryLink">
-            <img src="images/day4/6.jpg" alt="Pic 1">
-          </a>
-
-        </li> -->
-
-<!--         <li class="picture">
-          <a href="images/day4/7.jpg" class="galleryLink">
-            <img src="images/day4/7.jpg" alt="Pic 1">
-          </a>
-
-        </li>
-
-        <li class="picture">
-          <a href="images/day4/8.jpg" class="galleryLink">
-            <img src="images/day4/8.jpg" alt="Pic 1">
-          </a>
-
-        </li>
-
-        <li class="picture">
-          <a href="images/day4/9.jpg" class="galleryLink">
-            <img src="images/day4/9.jpg" alt="Pic 1">
-          </a>
-
-        </li>
-
-        <li class="picture">
-          <a href="images/day4/10.jpg" class="galleryLink">
-            <img src="images/day4/10.jpg" alt="Pic 1">
-          </a>
-
-        </li>
-
-        <li class="picture">
-          <a href="images/day4/11.jpg" class="galleryLink">
-            <img src="images/day4/11.jpg" alt="Pic 1">
-          </a>
-
-        </li>
-
-        <li class="picture">
-          <a href="images/day4/12.jpg" class="galleryLink">
-            <img src="images/day4/12.jpg" alt="Pic 1">
-          </a>
-
-        </li> -->
       </ul>
     </section>  
   </div>
@@ -128,7 +67,7 @@
       <li class="blog">
         <a href="day10.html" class="blog__link blog--lightGreen">
           <div class="blog__title">
-            <h1 class="header">Waiting for Kubi and James</h1>
+            <h1 class="header">Moving under stress</h1>
             <span class="date">April 21th 2014</span>
           </div>
         </a>
