add gallery2 and 3

--- a/day1.html
+++ b/day1.html
@@ -36,7 +36,7 @@
     <div class="blogTop red">
 
       <div class="imageWrap">
-        <img src="images/day4/main.jpg" alt="Team Photo">
+        <img src="images/day1/serious.jpg" alt="Team Photo">
       </div>
 
 
