--- a/day5.html
+++ b/day5.html
@@ -36,7 +36,7 @@
     <div class="blogTop teal">
 
       <div class="imageWrap">
-        <img src="images/day4/main.jpg" alt="Team Photo">
+        <img src="images/day5/2.jpg" alt="Team Photo">
       </div>
 
       <div class="blog--top">
