--- a/design16th.html
+++ b/design16th.html
@@ -43,10 +43,10 @@
 
         <!-- Title of the Blog -->
         <h1 class="header">
-          storyboarding and Personna
+          Storyboarding, personas and  UI model
         </h1>
         <span class="date">
-          April 15th 2014
+          April 16th-20th 2014
         </span>
       </div>
 
@@ -54,33 +54,58 @@
 
     <div class="blog--description">
 
-      <p>Today was exciting since we were going to cross the bridge from designing to programming! We went to EVOKE lab to discuss problems our app needs to solve and solutions the app provides.</p>
+      <p>We created personas of our target users, drew storyboard, finalized our UI and divided our whole coding to modules.</p>
 
       <!-- Edit Image and Caption -->
       <div class="blogImg">
-        <img src="images/design15th/7.jpg" alt="sf">
-        <span class="caption">Brainstorming</span>
+        <img src="images/design16th/1.jpg" alt="sf">
+        <span class="caption">Personas</span>
       </div>
 
 
-      <p>We started our design progress by storyboarding. We wrote down challenges for austic kids and parents individually and post them on the whiteboard </p>
+      <p>We created two personas. One is an 8 years old girl Lynda and the other is a 44 years old mother Kathy, whose autistic kid is Rosa. Lynda and Kathy undergo challenges for kids and parents accordingly. For example, Lynda She likes to eat food and wear clothes from a specific color. Mother Kathy has to repeat herself many times so Rosa can understand </p>
 
       <div class="blogImg">
-        <img src="images/design15th/1.jpg" alt="sf">
-        <span class="caption">Solution</span>
+        <img src="images/design16th/2.jpg" alt="sf">
+        <span class="caption">Storyboarding</span>
       </div>
 
-      <p>After we finished brainstorming, we clarified our thoughts into categories of expression, capture memories, assurance and engaging. Since autistic kids can not express themselves well, they can not get connected to others. Therefore, we want to develop an application that speaks out heir inner voice!</p>
+      <p>For storyboarding, we drew a failed case where the teacher can not calm down Lynda who cried suddenly in class. We also drew a successful case in which teacher passes our application to Lynda. She gets attracted by the beautiful icons and stops crying. Since she can express herself freely with our application, she gets a sense of control and enjoys playing it.</p>
       <div class="blogImg">
-        <img src="images/design15th/2.jpg" alt="sf">
-        <span class="caption">Collaboration</span>
+        <img src="images/design16th/6.jpg" alt="sf">
+        <span class="caption">Finalized UI</span>
       </div>
-      <p>After we discussed about how to implement our application, we split the work according to our specialities.</p>
-    </div> 
-         
+
+      <p>At first, our UI was the first on the left. However, we realized that although the left design will look nice on the phone, it will look funny on the computer. We stucked in this obstable for a while. Then, we defined our target users, who will use tablets more. After that, Cubi came up with the design on the right, which works perfect on devices with bigger width than height! We can see it is very instuitive from the similation of eyeball movement.</p>
+
     </div>
 
+    <section class="gallery">
+      <h2 class="header">
+        - Gallery -
+      </h2>
+      <ul class="pictures">
+        <li class="picture">
+          <a href="images/design16th/g1.jpg" class="galleryLink">
+            <img src="images/design16th/g1.jpg" alt="Pic 1">
+          </a>
 
+        </li>
+        <li class="picture">
+          <a href="images/design16th/g2.jpg" class="galleryLink">
+            <img src="images/design16th/g2.jpg" alt="Pic 1">
+          </a>
+
+        </li>
+        <li class="picture">
+          <a href="images/design16th/g3.jpg" class="galleryLink">
+            <img src="images/design16th/g3.jpg" alt="Pic 1">
+          </a>
+
+        </li>
+    </section>
+
+    </div>
 
   </div>
 </div>
