--- a/design21st.html
+++ b/design21st.html
@@ -43,43 +43,77 @@
 
         <!-- Title of the Blog -->
         <h1 class="header">
-          Logo and products
+          Logo and UI in the way
         </h1>
         <span class="date">
-          April 15th 2014
+          April 21th 2014
         </span>
       </div>
 
     </div>
 
+
+
     <div class="blog--description">
-
-      <p>Today was exciting since we were going to cross the bridge from designing to programming! We went to EVOKE lab to discuss problems our app needs to solve and solutions the app provides.</p>
-
+      <p>We designed our logo, made UI work in any format!</p>
       <!-- Edit Image and Caption -->
       <div class="blogImg">
-        <img src="images/design15th/7.jpg" alt="sf">
-        <span class="caption">Brainstorming</span>
-      </div>
-
-
-      <p>We started our design progress by storyboarding. We wrote down challenges for austic kids and parents individually and post them on the whiteboard </p>
+        <img src="images/design21st/g4.jpg" alt="sf">
+        <span class="caption">At first, our buttons all squeezed together</span>
+      </div>  
+      <div class="blogImg">
+        <img src="images/design21st/g2.jpg" alt="sf">
+        <span class="caption">Then, the icons were too big on the computer.</span>
+      </div>  
+      <div class="blogImg">
+        <img src="images/design21st/g3.jpg" alt="sf">
+        <span class="caption">Finally, we ajusted our css and got the most elegant UI</span>
+      </div>    
+      
+<!--       <p>We started our design progress by storyboarding. We wrote down challenges for austic kids and parents individually and post them on the whiteboard </p>
 
       <div class="blogImg">
-        <img src="images/design15th/1.jpg" alt="sf">
+        <img src="images/design21st/1.jpg" alt="sf">
         <span class="caption">Solution</span>
       </div>
 
       <p>After we finished brainstorming, we clarified our thoughts into categories of expression, capture memories, assurance and engaging. Since autistic kids can not express themselves well, they can not get connected to others. Therefore, we want to develop an application that speaks out heir inner voice!</p>
       <div class="blogImg">
-        <img src="images/design15th/2.jpg" alt="sf">
+        <img src="images/design21st/2.jpg" alt="sf">
         <span class="caption">Collaboration</span>
       </div>
-      <p>After we discussed about how to implement our application, we split the work according to our specialities.</p>
+      <div class="blogImg">
+        <img src="images/design21st/2.jpg" alt="sf">
+        <span class="caption">Collaboration</span>
+      </div>
+      <p>After we discussed about how to implement our application, we split the work according to our specialities.</p> -->
     </div> 
          
     </div>
+    <section class="gallery">
+      <h2 class="header">
+        - Fine with any format -
+      </h2>
+      <ul class="pictures">
+        <li class="picture">
+          <a href="images/design21st/2.jpg" class="galleryLink">
+            <img src="images/design21st/2.jpg" alt="Pic 1">
+          </a>
 
+        </li>
+        <li class="picture">
+          <a href="images/design21st/1.jpg" class="galleryLink">
+            <img src="images/design21st/1.jpg" alt="Pic 1">
+          </a>
+
+        </li>
+        <li class="picture">
+          <a href="images/design21st/4.jpg" class="galleryLink">
+            <img src="images/design21st/4.jpg" alt="Pic 1">
+          </a>
+
+        </li>
+    </section>
 
 
   </div>
