--- a/day7.html
+++ b/day7.html
@@ -36,7 +36,7 @@
     <div class="blogTop teal">
 
       <div class="imageWrap">
-        <img src="images/day7/main.jpg" alt="Team Photo">
+        <img src="images/day7/1.jpg" alt="Team Photo">
       </div>
 
       <div class="blog--top">
