--- a/design15th.html
+++ b/design15th.html
@@ -76,8 +76,8 @@
         <span class="caption">Collaboration</span>
       </div>
       <p>After we discussed about how to implement our application, we split the work according to our specialities.</p>
-    </div> 
-         
+    </div>
+
     </div>
 
 
@@ -177,6 +177,17 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
 <script src="js/build/production.min.js"></script>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-50188902-1', 'humblemakers.com ');
+  ga('send', 'pageview');
+
+</script>
 
 </body>
 </html>
