--- a/day10.html
+++ b/day10.html
@@ -71,9 +71,20 @@
 
       <p>After hard work, we rewarded ourselves with chipotle late dinner. I remembered Kenny's famous question "you have finished" when he saw me stop eating quckily. I felt bad that he thought I ate so fast. Just Kiding! It is true that Kenny was so funny today. When he spoke and also almost laughed at that moment, his voice sounded so funny! Moreover, Kevin used our application as a repeater and kept pressing "I want love..love...love..."</p>
     </div>
-   
+
   </div>
 </div>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-50188902-1', 'humblemakers.com ');
+  ga('send', 'pageview');
+
+</script>
 
 </body>
 </html>
