--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </li>
 
       </ul>
-    </section>  
+    </section>
   </div>
 
   <div class="blog-wrap">
@@ -140,6 +140,17 @@
     </ul>
   </div>
 </div>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-50188902-1', 'humblemakers.com ');
+  ga('send', 'pageview');
+
+</script>
 
 </body>
 </html>
