--- a/design21st.html
+++ b/design21st.html
@@ -55,21 +55,34 @@
 
 
     <div class="blog--description">
-      <p>We designed our logo, made UI work in any format!</p>
+      <p>We designed our logo, made UI work in any platform!</p>
+       <div class="blogImg">
+        <img src="images/design21st/pressa.jpg" alt="sf">
+        <span class="caption">Different fonts for our logo</span>
+      </div>   
+       <div class="blogImg">
+        <img src="images/design21st/sketch.jpg" alt="sf">
+        <span class="caption">Simple and elegant sketch</span>
+      </div>  
+       <div class="blogImg imgSmall">
+        <img src="images/design21st/logo.jpg" alt="sf">
+        <span class="caption">Colorful and Harp-like design</span>
+      </div>     
+      <p>Our logo designer, Kevin, created this flawless logo from sketch in two hours! Our logo "Pressa" not only sounds beautiful, but also has relevant meaning to autism.</p>
       <!-- Edit Image and Caption -->
       <div class="blogImg">
         <img src="images/design21st/g4.jpg" alt="sf">
         <span class="caption">At first, our buttons all squeezed together</span>
-      </div>
+      </div>  
       <div class="blogImg">
         <img src="images/design21st/g2.jpg" alt="sf">
         <span class="caption">Then, the icons were too big on the computer.</span>
-      </div>
+      </div>  
       <div class="blogImg">
         <img src="images/design21st/g3.jpg" alt="sf">
         <span class="caption">Finally, we ajusted our css and got the most elegant UI</span>
-      </div>
-
+      </div>    
+      
 <!--       <p>We started our design progress by storyboarding. We wrote down challenges for austic kids and parents individually and post them on the whiteboard </p>
 
       <div class="blogImg">
@@ -87,12 +100,12 @@
         <span class="caption">Collaboration</span>
       </div>
       <p>After we discussed about how to implement our application, we split the work according to our specialities.</p> -->
-    </div>
-
+    </div> 
+         
     </div>
     <section class="gallery">
       <h2 class="header">
-        - Fine with any format -
+        - Fine with any platform -
       </h2>
       <ul class="pictures">
         <li class="picture">
@@ -122,17 +135,6 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
 <script src="js/build/production.min.js"></script>
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-50188902-1', 'humblemakers.com ');
-  ga('send', 'pageview');
-
-</script>
 
 </body>
 </html>
