--- a/index.html
+++ b/index.html
@@ -58,17 +58,26 @@
         </li>
 
       </ul>
-    </section>
+    </section>  
   </div>
 
   <div class="blog-wrap">
     <ul class="blogs">
 
       <li class="blog">
+        <a href="day11.html" class="blog__link blog--purple">
+          <div class="blog__title">
+            <h1 class="header">Give you all of me</h1>
+            <span class="date">April 22nd 2014</span>
+          </div>
+        </a>
+      </li>
+
+      <li class="blog">
         <a href="day10.html" class="blog__link blog--lightGreen">
           <div class="blog__title">
-            <h1 class="header">Moving under stress</h1>
-            <span class="date">April 21th 2014</span>
+            <h1 class="header">Breaking through stress</h1>
+            <span class="date">April 21st 2014</span>
           </div>
         </a>
       </li>
@@ -140,17 +149,6 @@
     </ul>
   </div>
 </div>
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-50188902-1', 'humblemakers.com ');
-  ga('send', 'pageview');
-
-</script>
 
 </body>
 </html>
