change picture size

--- a/day11.html
+++ b/day11.html
@@ -58,7 +58,7 @@
 
             <!-- Edit Image and Caption -->
       <div class="blogImg">
-        <img src="images/day11/2.jpg" alt="sf">
+        <img src="images/day11/Cubi.jpg" alt="sf">
         <span class="caption">Jack Ma, what are you doing in the darkness</span>
       </div>
       <div class="blogImg">
