add blog23rd we will win for sure

--- a/day10.html
+++ b/day10.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class="blog--description">
-      <span class="quote">(Quote of the day: They only up to 4 people in a team guys! Oh, I'm sorry, I meant the HackUCI - by Kenny)</span>
+      <span class="quote">(Quote of the day: They allow only up to 4 people in a team guys! Oh, I'm sorry, I meant the HackUCI - by Kenny)</span>
 
       <p>We felt pretty stressful this morning when we found out that we still had to do the poster and video. We had a hard time deciding whether the article bar should appear on our application. Finally, Kevin suggested we focus on other undone work.</p>
 
