--- a/day13.html
+++ b/day13.html
@@ -42,7 +42,7 @@
 
       <div class="blog--top">
         <h1 class="header">
-          It's not good bye
+          It's not goodbye
         </h1>
         <span class="date">
           April 24th 2014
@@ -60,7 +60,7 @@
 
       <div class="blogImg">
         <img src="images/day13/4.jpg" alt="sf">
-        <span class="caption">Perfectionist Kevin worked hard for our poster</span>
+        <span class="caption">Perfectionist Kevin created the spiciest poster</span>
       </div>
 
       <p>I still remembered the first day I met them, I knew that I was in the right group. At first, I believed this instuition comes from their humor. Now, I realize that they are my destiny because everyone contributes to the team wholeheartly but asking for little. </p>
