--- a/index.html
+++ b/index.html
@@ -74,7 +74,16 @@
       </li>
 
       <li class="blog">
-        <a href="day11.html" class="blog__link blog--purple">
+        <a href="day12.html" class="blog__link blog--blue">
+          <div class="blog__title">
+            <h1 class="header">Exhausted yet excited</h1>
+            <span class="date">April 23rd 2014</span>
+          </div>
+        </a>
+      </li>
+
+      <li class="blog">
+        <a href="day11.html" class="blog__link blog--lightGreen">
           <div class="blog__title">
             <h1 class="header">Give you all of me</h1>
             <span class="date">April 22nd 2014</span>
@@ -83,7 +92,7 @@
       </li>
 
       <li class="blog">
-        <a href="day10.html" class="blog__link blog--lightGreen">
+        <a href="day10.html" class="blog__link blog--purple">
           <div class="blog__title">
             <h1 class="header">Breaking through stress</h1>
             <span class="date">April 21st 2014</span>
