--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
     <ul class="blogs">
 
       <li class="blog">
+        <a href="day14_Apr25.html" class="blog__link blog--teal">
+          <div class="blog__title">
+            <h1 class="header">Keep moving forwad</h1>
+            <span class="date">April 25th 2014</span>
+          </div>
+        </a>
+      </li>
+
+      <li class="blog">
         <a href="day13.html" class="blog__link blog--pink">
           <div class="blog__title">
             <h1 class="header">It's not goodbye</h1>
